--- a/src/main.css
+++ b/src/main.css
@@ -2,16 +2,52 @@
   --spacing-smaller: 0.5rem; /* 8px */
   --spacing-small: 0.625rem; /* 10px */
   --spacing-default: 1rem; /* 16px */
+  --spacing-medium: 2rem; /* 32px */
   --spacing-large: 2.75rem; /* 44px */
   --spacing-larger: 4.5rem; /* 72px */
 }
 
 body {
+  display: flex;
+  justify-content: center;
   background-color: #ebe9e4;
   font-family: "Work Sans";
+  padding: var(--spacing-larger) var(--spacing-large);
 }
 
 h1 {
   font-size: 1.5rem;
   line-height: 1.15;
+  margin-bottom: var(--spacing-medium);
+}
+
+#root {
+  width: 100%;
+  max-width: 749px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+nav {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin-bottom: var(--spacing-default);
+  padding-right: var(--spacing-small);
+}
+
+.grid-toggle {
+  display: block;
+  width: 24px;
+  height: 23px;
+  border: 0;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='23' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 23H2.667c-.708 0-1.386-.27-1.886-.748-.5-.48-.781-1.13-.781-1.807v-5.112c0-.677.281-1.327.781-1.807.5-.479 1.178-.748 1.886-.748H8c.707 0 1.386.269 1.886.748.5.48.78 1.13.78 1.807v5.112c0 .677-.28 1.327-.78 1.806-.5.48-1.179.749-1.886.749Zm-5.333-7.667v5.112H8v-5.112H2.667ZM21.334 23H16c-.707 0-1.385-.27-1.886-.748-.5-.48-.78-1.13-.78-1.807v-5.112c0-.677.28-1.327.78-1.807.5-.479 1.179-.748 1.886-.748h5.334c.707 0 1.385.269 1.885.748.5.48.781 1.13.781 1.807v5.112c0 .677-.28 1.327-.78 1.806-.501.48-1.18.749-1.886.749ZM16 15.333v5.112h5.334v-5.112H16ZM8 10.222H2.667c-.708 0-1.386-.269-1.886-.748C.281 8.994 0 8.344 0 7.667V2.556C0 1.878.281 1.228.781.749 1.281.269 1.959 0 2.667 0H8c.707 0 1.386.27 1.886.749s.78 1.129.78 1.807v5.11c0 .678-.28 1.328-.78 1.808-.5.479-1.179.748-1.886.748ZM2.667 2.556v5.11H8v-5.11H2.667ZM21.334 10.222H16c-.707 0-1.385-.269-1.886-.748-.5-.48-.78-1.13-.78-1.807V2.556c0-.678.28-1.328.78-1.807C14.614.269 15.293 0 16 0h5.334c.707 0 1.385.27 1.885.749S24 1.878 24 2.556v5.11c0 .678-.28 1.328-.78 1.808-.501.479-1.18.748-1.886.748ZM16 2.556v5.11h5.334v-5.11H16Z' fill='%23000'/%3E%3C/svg%3E");
+  cursor: pointer;
 }
