--- a/src/main.css
+++ b/src/main.css
@@ -35,7 +35,7 @@ main {
 
 nav {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 100%;
   margin-bottom: var(--spacing-default);
   padding-right: var(--spacing-small);
@@ -49,5 +49,16 @@ nav {
   background-size: 100%;
   background-repeat: no-repeat;
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='23' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 23H2.667c-.708 0-1.386-.27-1.886-.748-.5-.48-.781-1.13-.781-1.807v-5.112c0-.677.281-1.327.781-1.807.5-.479 1.178-.748 1.886-.748H8c.707 0 1.386.269 1.886.748.5.48.78 1.13.78 1.807v5.112c0 .677-.28 1.327-.78 1.806-.5.48-1.179.749-1.886.749Zm-5.333-7.667v5.112H8v-5.112H2.667ZM21.334 23H16c-.707 0-1.385-.27-1.886-.748-.5-.48-.78-1.13-.78-1.807v-5.112c0-.677.28-1.327.78-1.807.5-.479 1.179-.748 1.886-.748h5.334c.707 0 1.385.269 1.885.748.5.48.781 1.13.781 1.807v5.112c0 .677-.28 1.327-.78 1.806-.501.48-1.18.749-1.886.749ZM16 15.333v5.112h5.334v-5.112H16ZM8 10.222H2.667c-.708 0-1.386-.269-1.886-.748C.281 8.994 0 8.344 0 7.667V2.556C0 1.878.281 1.228.781.749 1.281.269 1.959 0 2.667 0H8c.707 0 1.386.27 1.886.749s.78 1.129.78 1.807v5.11c0 .678-.28 1.328-.78 1.808-.5.479-1.179.748-1.886.748ZM2.667 2.556v5.11H8v-5.11H2.667ZM21.334 10.222H16c-.707 0-1.385-.269-1.886-.748-.5-.48-.78-1.13-.78-1.807V2.556c0-.678.28-1.328.78-1.807C14.614.269 15.293 0 16 0h5.334c.707 0 1.385.27 1.885.749S24 1.878 24 2.556v5.11c0 .678-.28 1.328-.78 1.808-.501.479-1.18.748-1.886.748ZM16 2.556v5.11h5.334v-5.11H16Z' fill='%23000'/%3E%3C/svg%3E");
+  cursor: pointer;
+}
+
+.sort-toggle {
+  display: block;
+  width: 32px;
+  height: 23px;
+  border: 0;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml,%3Csvg width='32' height='23' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M.394 16.07a1.215 1.215 0 0 1 0-1.79c.263-.249.604-.373.949-.373.344 0 .685.124.948.372l4.656 4.398V5.268c0-.698.6-1.268 1.342-1.268.74 0 1.343.566 1.343 1.268v13.409l4.647-4.398a1.394 1.394 0 0 1 1.897 0 1.215 1.215 0 0 1 0 1.792l-6.942 6.557c-.25.236-.592.372-.949.372s-.698-.132-.948-.372L.394 16.07ZM30.7 6.93a1.215 1.215 0 0 1 0 1.79 1.375 1.375 0 0 1-.948.373c-.345 0-.686-.124-.948-.372l-4.656-4.398v13.409c0 .698-.6 1.268-1.343 1.268-.739 0-1.342-.566-1.342-1.268V4.323l-4.648 4.398a1.394 1.394 0 0 1-1.897 0 1.215 1.215 0 0 1 0-1.792L21.861.372c.25-.236.591-.372.948-.372.358 0 .698.132.949.372L30.7 6.93Z' fill='%23000'/%3E%3C/svg%3E");
   cursor: pointer;
 }
