--- a/src/components/Members/members.css
+++ b/src/components/Members/members.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: var(--spacing-default);
   width: 100%;
+  padding: 1px;
   list-style: none;
   overflow: hidden;
 }
