--- a/src/main.css
+++ b/src/main.css
@@ -36,6 +36,7 @@ main {
 nav {
   display: flex;
   justify-content: space-between;
+  align-items: flex-end;
   width: 100%;
   margin-bottom: var(--spacing-default);
   padding-right: var(--spacing-small);
@@ -61,4 +62,38 @@ nav {
   background-repeat: no-repeat;
   background-image: url("data:image/svg+xml,%3Csvg width='32' height='23' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M.394 16.07a1.215 1.215 0 0 1 0-1.79c.263-.249.604-.373.949-.373.344 0 .685.124.948.372l4.656 4.398V5.268c0-.698.6-1.268 1.342-1.268.74 0 1.343.566 1.343 1.268v13.409l4.647-4.398a1.394 1.394 0 0 1 1.897 0 1.215 1.215 0 0 1 0 1.792l-6.942 6.557c-.25.236-.592.372-.949.372s-.698-.132-.948-.372L.394 16.07ZM30.7 6.93a1.215 1.215 0 0 1 0 1.79 1.375 1.375 0 0 1-.948.373c-.345 0-.686-.124-.948-.372l-4.656-4.398v13.409c0 .698-.6 1.268-1.343 1.268-.739 0-1.342-.566-1.342-1.268V4.323l-4.648 4.398a1.394 1.394 0 0 1-1.897 0 1.215 1.215 0 0 1 0-1.792L21.861.372c.25-.236.591-.372.948-.372.358 0 .698.132.949.372L30.7 6.93Z' fill='%23000'/%3E%3C/svg%3E");
   cursor: pointer;
+}
+
+.grid-toggle:focus-visible,
+.sort-toggle:focus-visible {
+  outline-color: #000;
+  outline-style: dotted;
+}
+
+.search {
+  position: relative;
+}
+
+.search__input {
+  padding: var(--spacing-smaller);
+  padding-left: 1.75rem;
+  border: 0;
+  border-bottom: 2px solid #000;
+  background: none;
+  font-size: 1.125rem;
+}
+
+.search__input:focus-visible {
+  outline: 0;
+}
+
+.search__icon {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 20px;
+  height: 18px;
+  background-image: url("data:image/svg+xml,%3Csvg width='20' height='18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23a)'%3E%3Cmask id='b' fill='%23fff'%3E%3Cpath d='m19.049 16.712-5.358-5.169c1.056-1.22 1.692-2.781 1.692-4.485 0-3.888-3.31-7.05-7.383-7.05C3.928.008.61 3.173.61 7.061c0 3.889 3.31 7.05 7.383 7.05a7.58 7.58 0 0 0 4.584-1.527l5.377 5.183a.773.773 0 0 0 1.095 0 .709.709 0 0 0 0-1.055Zm-16.87-9.65c0-3.055 2.61-5.538 5.814-5.538 3.203 0 5.813 2.483 5.813 5.537 0 3.055-2.61 5.537-5.813 5.537-3.204 0-5.814-2.486-5.814-5.537Z'/%3E%3C/mask%3E%3Cpath d='m19.049 16.712-5.358-5.169c1.056-1.22 1.692-2.781 1.692-4.485 0-3.888-3.31-7.05-7.383-7.05C3.928.008.61 3.173.61 7.061c0 3.889 3.31 7.05 7.383 7.05a7.58 7.58 0 0 0 4.584-1.527l5.377 5.183a.773.773 0 0 0 1.095 0 .709.709 0 0 0 0-1.055Zm-16.87-9.65c0-3.055 2.61-5.538 5.814-5.538 3.203 0 5.813 2.483 5.813 5.537 0 3.055-2.61 5.537-5.813 5.537-3.204 0-5.814-2.486-5.814-5.537Z' fill='%23000'/%3E%3Cpath d='m19.049 16.712-1.389 1.44 1.389-1.44Zm-5.358-5.169-1.513-1.308-1.239 1.433 1.364 1.315 1.388-1.44Zm-1.114 1.04 1.388-1.44-1.23-1.186-1.364 1.032 1.206 1.595Zm7.86 2.69-5.357-5.169-2.777 2.879 5.357 5.168 2.777-2.879Zm-5.233-2.421c1.35-1.561 2.179-3.58 2.179-5.794h-4c0 1.193-.442 2.296-1.204 3.177l3.025 2.617Zm2.179-5.794c0-5.079-4.294-9.05-9.383-9.05v4c3.056 0 5.383 2.352 5.383 5.05h4ZM8-1.992c-5.087 0-9.39 3.974-9.39 9.053h4c0-2.696 2.334-5.053 5.39-5.053v-4Zm-9.39 9.053c0 5.079 4.294 9.05 9.383 9.05v-4c-3.056 0-5.383-2.352-5.383-5.05h-4Zm9.383 9.05a9.58 9.58 0 0 0 5.791-1.932l-2.413-3.19a5.58 5.58 0 0 1-3.378 1.122v4Zm3.196-2.087 5.377 5.183 2.776-2.88-5.377-5.183-2.776 2.88Zm5.377 5.183a2.773 2.773 0 0 0 3.87 0l-2.775-2.88c.209-.202.508-.334.84-.334.333 0 .633.132.841.334l-2.776 2.88Zm3.87 0a2.708 2.708 0 0 0 0-3.935l-2.775 2.88a1.271 1.271 0 0 1-.377-.913c0-.387.167-.71.377-.912l2.776 2.88ZM4.18 7.06c0-1.858 1.621-3.537 3.814-3.537v-4C3.778-.476.179 2.811.179 7.061h4Zm3.814-3.537c2.192 0 3.813 1.679 3.813 3.537h4c0-4.25-3.6-7.537-7.813-7.537v4Zm3.813 3.537c0 1.859-1.621 3.537-3.813 3.537v4c4.214 0 7.813-3.286 7.813-7.537h-4Zm-3.813 3.537c-2.192 0-3.814-1.681-3.814-3.537h-4c0 4.246 3.599 7.537 7.814 7.537v-4Z' fill='%23000' mask='url(%23b)'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='a'%3E%3Cpath fill='%23fff' transform='translate(.61)' d='M0 0h18.674v18H0z'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
 }
